fix(search): wraparound text for autosuggest entries
- Change fixed height and truncated text overflow to variable height,
  padding and text wraparound
- Take the chance to use chakra-specified theme colours where possible

--- a/client/src/components/SearchBox/SearchBox.styles.scss
+++ b/client/src/components/SearchBox/SearchBox.styles.scss
@@ -1,4 +1,3 @@
-@import '../../styles/colours';
 @import '../../styles/misc';
 @import '../../styles/text';
 
@@ -17,8 +16,8 @@
       flex: 1;
 
       .search-box {
-        color: $neutral-900;
-        background-color: $white;
+        color: var(--chakra-colors-neutral-900);
+        background-color: white;
         border: 1px solid var(--chakra-colors-gray-800);
         border-radius: 4px;
         width: 100%;
@@ -30,7 +29,7 @@
       }
 
       .search-box .search-input::placeholder{
-        color: $neutral-500
+        color: var(--chakra-colors-neutral-500);
       }
 
       .search-results {
@@ -50,16 +49,12 @@
       .search-item {
         display: flex;
         align-items: center;
-        padding: 0 16px;
-        height: 50px;
+        padding: 10px 16px;
         box-sizing: border-box;
         width: 100%;
 
         .search-item-text {
-          color: $neutral-800;
-          white-space: nowrap;
-          text-overflow: ellipsis;
-          overflow: hidden;
+          color: var(--chakra-colors-neutral-800);
         }
       }
     }
